# CS495

./: .gitignore  README.md  test.py
bevy-test/: Cargo.toml  points.csv
bevy-test/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs  stl.rs
prototype/: Cargo.toml
prototype/src/: main.rs
rapier-test/: Cargo.toml
rapier-test/src/: main.rs
