[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = "0.14.1"
bevy_input = "0.9.1"
bevy_math = "0.9.1"
bevy_render = "0.9.1"
bevy_transform = "0.9.1"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
