[package]
name = "rapier-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
duration-string = "0.2.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
rand = "0.8.5"
stl_io = "0.7.0"
