[package]
name = "rapier-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
duration-string = "0.3.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
meshx = { version = "0.5.2", default-features = false, features=["objio", "io"]}
ctrlc = "3.2.5"
nalgebra = "0.30"
itertools = "0.10.5"
fastrand = "1.9.0"
